release Beta-1.0